--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,5 @@ app.*.map.json
 /lib/firebase_options.dart
 /firebase.json
 /android/app/google-services.json
+/node_modules/recetas360-dd86c-firebase-adminsdk-fbsvc-6e2fa12fdd.json
+/node_modules
