--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   firebase_auth: ^5.5.1
   firebase_core: ^3.12.1
   firebase_storage: ^12.4.4
+  intl: ^0.18.1	
 
   flutter:
     sdk: flutter
