--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,28 +4,53 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: ^3.5.4
+  sdk: '>=3.4.0 <4.0.0' # Updated to a more common constraint
 
 dependencies:
-  cloud_firestore: ^5.6.5
-  firebase_auth: ^5.5.1
-  firebase_core: ^3.12.1
-  firebase_storage: ^12.4.4
-  intl: ^0.18.1	
-
   flutter:
     sdk: flutter
-  http: ^1.3.0
-  provider: ^6.1.2
-  shared_preferences: ^2.2.0
 
+  # Firebase
+  cloud_firestore: ^5.6.5 # Your existing version
+  firebase_auth: ^5.5.1    # Your existing version
+  firebase_core: ^3.12.1   # Your existing version
+  firebase_storage: ^12.4.4 # Your existing version
+
+  # State Management & Utilities
+  provider: ^6.1.2           # Your existing version
+  shared_preferences: ^2.2.0 # Your existing version
+  intl: ^0.19.0              # Updated to latest compatible version
+  http: ^1.3.0               # Your existing version
+
+  # --- Added for Redesign ---
+  flex_color_scheme: ^7.3.1 # Or latest version
+  google_fonts: ^6.2.1    # Or latest version
+  flutter_animate: ^4.5.0 # Or latest version
+  shimmer: ^3.0.0         # Or latest version
+  # --- End of added packages ---
+
+  cupertino_icons: ^1.0.6 # Added standard cupertino icons
+
+# Development dependencies
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^4.0.0 # Updated to latest compatible version
 
 
-  
 flutter:
   uses-material-design: true
 
+
+  # --- SECCIÓN DE FUENTES AÑADIDA/MODIFICADA ---
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins-Regular.ttf
+          # weight: 400 # Opcional
+        - asset: assets/fonts/Poppins-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Poppins-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/Poppins-Bold.ttf
+          weight: 700
