--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,50 +4,50 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: '>=3.4.0 <4.0.0' # Updated to a more common constraint
+  sdk: '>=3.4.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
   # Firebase
-  cloud_firestore: ^5.6.5 # Your existing version
-  firebase_auth: ^5.5.1    # Your existing version
-  firebase_core: ^3.12.1   # Your existing version
-  firebase_storage: ^12.4.4 # Your existing version
+  cloud_firestore: ^4.17.4
+  firebase_auth: ^4.19.6
+  firebase_core: ^2.31.1
+  firebase_storage: ^11.7.7
 
   # State Management & Utilities
-  provider: ^6.1.2           # Your existing version
-  shared_preferences: ^2.2.0 # Your existing version
-  intl: ^0.19.0              # Updated to latest compatible version
-  http: ^1.3.0               # Your existing version
+  provider: ^6.1.2
+  shared_preferences: ^2.2.0
+  intl: ^0.19.0
+  http: ^1.3.0
 
   # --- Added for Redesign ---
-  flex_color_scheme: ^7.3.1 # Or latest version
-  google_fonts: ^6.2.1    # Or latest version
-  flutter_animate: ^4.5.0 # Or latest version
-  shimmer: ^3.0.0         # Or latest version
+  flex_color_scheme: ^7.3.1
+  google_fonts: ^6.2.1
+  flutter_animate: ^4.5.0
+  shimmer: ^3.0.0
   # --- End of added packages ---
 
-  cupertino_icons: ^1.0.6 # Added standard cupertino icons
+  cupertino_icons: ^1.0.6
+  google_sign_in: ^6.2.1
+  image_picker: ^1.1.1
+  flutter_rating_bar: ^4.0.1
 
 # Development dependencies
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0 # Updated to latest compatible version
-
+  flutter_lints: ^3.0.0
 
 flutter:
   uses-material-design: true
-
 
   # --- SECCIÓN DE FUENTES AÑADIDA/MODIFICADA ---
   fonts:
     - family: Poppins
       fonts:
         - asset: assets/fonts/Poppins-Regular.ttf
-          # weight: 400 # Opcional
         - asset: assets/fonts/Poppins-Medium.ttf
           weight: 500
         - asset: assets/fonts/Poppins-SemiBold.ttf
