Compartir recetas seguido

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -24,6 +24,21 @@
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+
+            <!-- INTENT-FILTER PARA DYNAMIC LINKS CORREGIDO -->
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <data
+                    android:host="recetas360.page.link"
+                    android:scheme="https"/>
+                <data
+                    android:host="recetas360.page.link"
+                    android:scheme="http"/>
+            </intent-filter>
+            <!-- FIN DEL INTENT-FILTER PARA DYNAMIC LINKS -->
+
         </activity>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
