--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,20 +11,21 @@ dependencies:
     sdk: flutter
 
   # Firebase
-  cloud_firestore: ^4.17.4
-  firebase_auth: ^4.19.6
-  firebase_core: ^2.31.1
-  firebase_storage: ^11.7.7
-  firebase_dynamic_links: 5.5.7 # O la última versión disponible
+  cloud_firestore: ^5.6.7
+  firebase_auth: ^5.5.3
+  firebase_core: ^3.13.0
+  firebase_storage: ^12.4.5
+  firebase_dynamic_links: ^6.1.5 # O la última versión disponible
+  firebase_analytics: ^11.4.5 # Añade esta línea (o la última versión)
 
   # State Management & Utilities
   provider: ^6.1.2
   shared_preferences: ^2.2.0
-  intl: ^0.19.0
+  intl: ^0.20.2
   http: ^1.3.0
 
   # --- Added for Redesign ---
-  flex_color_scheme: ^7.3.1
+  flex_color_scheme: ^8.2.0
   google_fonts: ^6.2.1
   flutter_animate: ^4.5.0
   shimmer: ^3.0.0
@@ -34,17 +35,19 @@ dependencies:
   google_sign_in: ^6.2.1
   image_picker: ^1.1.1
   flutter_rating_bar: ^4.0.1
-  share_plus: ^9.0.0
+  share_plus: ^11.0.0
+  
 
 # Development dependencies
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^5.0.0
 
 flutter:
   uses-material-design: true
-
+  assets:
+    - assets/images/
   # --- SECCIÓN DE FUENTES AÑADIDA/MODIFICADA ---
   fonts:
     - family: Poppins
