Todo lo nuevo queda poco

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   firebase_storage: ^12.4.5
   firebase_dynamic_links: ^6.1.5 # O la última versión disponible
   firebase_analytics: ^11.4.5 # Añade esta línea (o la última versión)
+  cloud_functions: ^5.5.0
   # State Management & Utilities
   provider: ^6.1.2
   shared_preferences: ^2.2.0
@@ -35,6 +36,7 @@ dependencies:
   image_picker: ^1.1.1
   flutter_rating_bar: ^4.0.1
   share_plus: ^11.0.0
+  audioplayers: ^5.0.0
 
 # Development dependencies
 dev_dependencies:
@@ -46,6 +48,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/sounds/notification.mp3
   # --- SECCIÓN DE FUENTES AÑADIDA/MODIFICADA ---
   fonts:
     - family: Poppins
