--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   shared_preferences: ^2.2.0
   intl: ^0.20.2
   http: ^1.3.0
+  
 
   # --- Added for Redesign ---
   flex_color_scheme: ^8.2.0
@@ -39,6 +40,10 @@ dependencies:
   # Replace audioplayers with just_audio
   just_audio: ^0.9.36
   audio_session: ^0.1.18 # Add or ensure this line is present
+  # Gemini API
+  google_generative_ai: ^0.4.0 # O la última versión estable disponible
+  flutter_dotenv: ^5.1.0 # Asegúrate de tener esta o una versión compatible
+
 
 # Development dependencies
 dev_dependencies:
@@ -50,6 +55,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
+    - .env
     - assets/images/
     - assets/sounds/notification.mp3
     - assets/icon/ # <--- ASEGÚRATE DE QUE ESTA CARPETA (O DONDE ESTÉ TU ICONO) ESTÉ LISTADA SI ES NECESARIO PARA OTROS PROPÓSITOS
